--- a/styles.css
+++ b/styles.css
@@ -1,60 +1,71 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
 
-:root{
-    --branco-principal: #FFFFFF;
-    --cinza-secundario: ##C0C0C0;
-    --botao-azul: #167BF7;
-    --cor-de-fundo: #00030C;
-    --fonte-principal: 'Inter';
+:root {
+  --branco-principal: #ffffff;
+  --cinza-secundario: ##c0c0c0;
+  --botao-azul: #167bf7;
+  --cor-de-fundo: #00030c;
+  --fonte-principal: "Inter";
 }
 
-body{
-    background-color: var(--cor-de-fundo);
-    color: var(--branco-principal);
-    font-family: var(--fonte-principal);
-    font-size: 16px;
-    font-weight: 400;
+body {
+  background-color: var(--cor-de-fundo);
+  color: var(--branco-principal);
+  font-family: var(--fonte-principal);
+  font-size: 16px;
+  font-weight: 400;
 }
 
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.principal{
-    background-image: url(./img/Background.png);
-    background-repeat: no-repeat;
-    background-size: contain;
+.principal {
+  background-image: url(./img/Background.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  align-items: center;
+  text-align: center;
 }
 
-.container{
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 50% 50%;
+.container {
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 50% 50%;
 }
 
-.container__titulo{
-    font-size: 28px;
-    font-weight: 700;
+.container__caixa {
+    margin: 0 6em;
 }
 
-.container__botao{
-    background-color: var(--botao-azul);
-    border-radius: 5px;
-    padding: 1em;
-    color: var(--branco-principal);
-    text-decoration: none;
-    display: block;
-    text-align: center;
+.container__titulo {
+  font-size: 28px;
+  font-weight: 700;
+}
+
+.container__imagem {
+  margin: 1em 0 2em 0;
+}
+
+.container__botao {
+  background-color: var(--botao-azul);
+  border-radius: 5px;
+  padding: 1em;
+  color: var(--branco-principal);
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  margin-bottom: 1em;
 }
 
 .botao_secundario {
-    background-color: transparent;
-    border: 2px solid var(--branco-principal);
+  background-color: transparent;
+  border: 2px solid var(--branco-principal);
 }
 
-.container__aviso{
-    font-size: 12px;
-    color: var(--cinza-secundario);
-    text-align: center;
+.container__aviso {
+  font-size: 12px;
+  color: var(--cinza-secundario);
+  text-align: center;
 }
