--- a/styles.css
+++ b/styles.css
@@ -69,3 +69,23 @@ body {
   color: var(--cinza-secundario);
   text-align: center;
 }
+
+.secundario__imagem{
+    width: 80%;
+}
+
+.secundario { 
+    align-items: center;
+    margin: 0 10em;
+}
+
+.descricao__titulo{
+    font-weight: 700;
+    font-size: 48px;
+    color: var(--branco-principal);
+    margin-bottom: 0.3em;
+}
+
+.descricao__texto{
+    color: var(--cinza-secundario);
+}
