--- a/styles.css
+++ b/styles.css
@@ -89,3 +89,29 @@ body {
 .descricao__texto{
     color: var(--cinza-secundario);
 }
+
+.secundario__botao{
+  display: inline-block;
+  margin-top: 1em;
+}
+
+.dispositivos{
+  text-align: center;
+}
+
+.dispositivos__titulo{
+  font-size: 48px;
+  color: var(--branco-principal);
+}
+
+.dispositivos__lista{
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+  margin: 5em 0;
+}
+
+.lista__item{
+  font-size: 32px;
+  color: var(--branco-principal);
+}
