--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
   --botao-azul: #167bf7;
   --cor-de-fundo: #00030c;
   --fonte-principal: "Inter";
+  --botao-azul-efeito: #3c92fa;
 }
 
 body {
@@ -57,6 +58,11 @@ body {
   display: block;
   text-align: center;
   margin-bottom: 1em;
+}
+
+.container__botao:hover{
+  background-color: var(--botao-azul-efeito);
+  color: var(--cor-de-fundo);
 }
 
 .botao_secundario {
@@ -113,5 +119,40 @@ body {
 
 .lista__item{
   font-size: 32px;
+  color: var(--branco-principal);
+}
+
+.rodape{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  margin: 0 0 20px 0;
+}
+
+.rodape__logo{
+  margin-bottom: 1em;
+}
+
+.rodape__lista{
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  text-decoration: none;
+  justify-content: flex-start;
+  gap: 10px;
+}
+
+.lista__link a{
+  text-decoration: none;
+  color: var(--cinza-secundario);
+}
+
+.lista__link a:hover{
+  color: var(--botao-azul);
+}
+
+.rodape__texto{
   color: var(--branco-principal);
 }
